--- a/public/index.html
+++ b/public/index.html
@@ -139,6 +139,9 @@
 
         <script src="js/jquery.simplemodal.1.4.4.min.js"></script>
 
+<!--        <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>-->
+        <script type="text/javascript" src="js/jquery.canvasjs.min.js"></script>
+
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
