--- a/public/page_2_backup.html
+++ b/public/page_2_backup.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 
     <head>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script type="text/javascript" src="js/canvasjs-1.7.0/jquery.canvasjs.min.js"></script>
-        <script src="http://cdn.zingchart.com/zingchart.min.js"></script>
-
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title></title>
@@ -36,7 +32,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">ANALYTICS</a>
+          <a class="navbar-brand" href="index.html">PEOPLE'S BOOZE!!!!</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
         </div><!--/.navbar-collapse -->
@@ -46,49 +42,58 @@
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
+        <div class="col-md-12">
+          <h2>Found It!</h2>
+          <img src="wine_3.jpg" style='float: left; padding-right: 10px'></img><p>Cuvee <i>Soûlard Américain</i> by <i>Chateau Casse Tête</i> 2010 is a wonderful example of a winemaking by someone who is constantly and happily drunk.  The head wine maker-owner of the property is a former Wall Street Investment Banker who left the West Village for greener pastures of Languedoc-Roussillon and have not been spotted sober ever since.  Our tasting team has visited the winery. 
+          <a id="youtube">Click here</a> for more information </p>
+
+          <p><iframe frameborder="0" height="344" src="http://www.youtube.com/embed/Wxdl8oZlcZk?feature=oembed" width="459" id="video" style="display: none"></iframe></p>
+        </div>
+      </div>
+
+    <div class="container">
+      <!-- Example row of columns -->
+      <div class="row_half">
         <div class="col-md-6">
           <style>
             .row{
               text-align: center;
             }
           </style>
-          <h2>Analyze This....</h2>
-          <img src="wine_2.jpg" >
-          </img>
-          <p></p>
-<!--          <p><a class="btn btn-warning" href="page_2.html" role="button">SNAP</a></p> -->
+          <h2>You Can buy this Gem at:</h2>
+           <hr></hr>
+          <h4>Booze for the People - <i>$17.56</i></h4>
+          <address>45 4th Avenue Brooklyn NY. <a href="https://www.google.com/maps/place/45+4+Avenue+Brooklyn+NY"><i>Map It!</i></a></address>
+           <hr></hr>
+          <h4>Liquor Up - <i>$15.99</i></h4>
+          <address>54W 12th St. Manhattan NY. <a href="https://www.google.com/maps/place/54+West+12+Street+NY"><i>Map It!</i></a></address>
+           <hr></hr>
+          <h4>Vino Pusher -<i>$18.50</i></h4>
+          <address>100E 5St. Manhattan NY. <a href="https://www.google.com/maps/place/10+East+5+Street+NY"><i>Map It!</i></a></address>
         </div>
         <div class="col-md-6">
-          <h2>Pick a Store You Want to Analyze</h2>
-          <br></br>
-          <form id="analyticsForm">
-            <div class="form-group">
-              <input id='ID' name="name" placeholder="Store ID (int btw 1 & 50)" class="form-control-label">
-            </div>
-            <div class="form-group">
-              <input type="text" placeholder="Producer" class="form-control-prod">
-            </div>
-            <div class="form-group">
-              <input type="text" placeholder="Vintage" class="form-control-year">
-            </div>
-            <br></br>
-            <button type="submit" class="btn btn-info" value="Submit">Find It!</button>
-            
-          </form>
+          <h2>You May Also Like</h2>
+         
+          <h4>Cuvee Bonne Homme, Chateau Ivrogne 2011 <a class="btn btn-warning btn-small" role="button" style="float: right" id="knopka_1">Get It</a></h4>
+          <hr></hr>
+          <h4>Cuvee Trois Couchons, Chateau Wink Wink 2012 <a class="btn btn-warning btn-small" role="button" style="float: right" id="knopka_1">Get It</a></h4>
+          <hr></hr>
+          <h4>Cuvee Bagette, Chateau Berette 2010 <a class="btn btn-warning btn-small" role="button" style="float: right" id="knopka_1">Get It</a></h4>
 
-<!--          <p><button class="btn btn-info" id="knopka_2_1">Analyze!</button></p>   -->  
        </div>
 
       </div>
-<br></br>
-<!-- Graphics -->
-      <div id='chartDiv'></div>
+      </div> <!-- /container -->
+
+          <div id="dialog" title="PEOPLE'S BOOZE SAY">
+    </div>  
 
       <hr>
       <footer>
         <p>&copy; People's Booze</p>
       </footer>
-    </div> <!-- /container --><script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
 
         <script src="js/vendor/jquery-ui-1.11.2.custom/jquery-ui.js">
