--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
           <img src="P_1.jpg" >
           </img>
           <p></p>
-          <p><a class="btn btn-info" href="page_2.html" role="button">Pick It!</a></p>
+          <p><button class="btn btn-info" id="knopka_1">Pick It!</button></p>
         </div>
         <div class="col-md-6">
           <h3>Tinto Roriz</h3>
@@ -89,14 +89,14 @@
           <img src="P_3.jpg" >
           </img>
           <p></p>
-          <p><a class="btn btn-info" href="page_2.html" role="button">Pick It!</a></p>
+          <p><button class="btn btn-info" id="knopka_3">Pick It!</button></p>
         </div>
         <div class="col-md-6">
           <h3>Rose</h3>
           <img src="P_4.jpg" >
           </img>
           <p></p>
-          <p><a class="btn btn-info" href="page_2.html" role="button">Pick It!</a></p>
+          <p><button class="btn btn-info" id="knopka_4">Pick It!</button></p>
         </div>
 
     <div class="container"> 
@@ -111,14 +111,13 @@
           <img src="P_5.jpg" >
           </img>
           <p></p>
-          <p><a class="btn btn-info" href="page_2.html" role="button">Pick It!</a></p>
-        </div>
+          <p><button class="btn btn-info" id="knopka_5">Pick It!</button></p>        </div>
         <div class="col-md-6">
           <h3>Pinot Gris</h3>
           <img src="P_6.jpg" >
           </img>
           <p></p>
-          <p><a class="btn btn-info" href="page_2.html" role="button">Pick It!</a></p>
+          <p><button class="btn btn-info" id="knopka_6">Pick It!</button></p>
         </div>
       </div>
 
@@ -138,9 +137,6 @@
         <script src="js/main.js"></script>
 
         <script src="js/jquery.simplemodal.1.4.4.min.js"></script>
-
-<!--        <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>-->
-        <script type="text/javascript" src="js/jquery.canvasjs.min.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
