--- a/public/page_2.html
+++ b/public/page_2.html
@@ -2,7 +2,7 @@
 
     <head>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script type="text/javascript" src="js/canvasjs-1.7.0/jquery.canvasjs.min.js"></script>
+<!-- <script type="text/javascript" src="js/canvasjs-1.7.0/jquery.canvasjs.min.js"></script>-->
         <script src="http://cdn.zingchart.com/zingchart.min.js"></script>
 
         <meta charset="utf-8">
