--- a/public/page_2.html
+++ b/public/page_2.html
@@ -63,16 +63,20 @@
           <br></br>
           <form id="analyticsForm">
             <div class="form-group">
-              <input id='ID' name="name" placeholder="Store ID (int btw 1 & 50)" class="form-control-label">
+              <input id='ID' name="name" placeholder="Store ID (int btw 1 & 300)" class="form-control-label">
             </div>
-            <div class="form-group">
+            <!--FOR FUTURE EXPANSION-->
+<!--            <div class="form-group">
               <input type="text" placeholder="Producer" class="form-control-prod">
             </div>
             <div class="form-group">
               <input type="text" placeholder="Vintage" class="form-control-year">
-            </div>
+            </div>-->
             <br></br>
-            <button type="submit" class="btn btn-info" value="Submit">Find It!</button>
+            <br></br>
+
+
+            <button type="submit" class="btn-lg btn-info" value="Submit">Analyze!</button>
             
           </form>
 
