--- a/public/page_2.html
+++ b/public/page_2.html
@@ -72,21 +72,19 @@
             <div class="form-group">
               <input type="text" placeholder="Vintage" class="form-control-year">
             </div>-->
-            <br></br>
-            <br></br>
-
 
             <button type="submit" class="btn-lg btn-info" value="Submit">Analyze!</button>
             
           </form>
-
-<!--          <p><button class="btn btn-info" id="knopka_2_1">Analyze!</button></p>   -->  
+        <h2>All Stores</h2>
+        <p><button class="btn-lg btn-info" id="knopka_2_1">Analyze!</button></p>    
        </div>
 
       </div>
 <br></br>
 <!-- Graphics -->
       <div id='chartDiv'></div>
+      <div id='chartDiv_2'></div>
 
       <hr>
       <footer>
