--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
           <a class="navbar-brand" href="index.html">STORE FRONT SIMULATOR</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <a class="btn btn-success navbar-btn navbar-right" href="page_2.html" role="button">Analytics</a>
+          <a class="btn btn-success navbar-btn navbar-right" href="page_2.html" role="button" target="_blank">Analytics</a>
         </div><!--/.navbar-collapse -->
       </div>
     </nav> 
@@ -125,7 +125,7 @@
 
       <hr>
       <footer>
-        <p>&copy; Boozy iBoxes</p>
+        <p>&copy; Boozie iBoxes</p>
       </footer>
     </div> <!-- /container --><script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
