--- a/public/page_2.html
+++ b/public/page_2.html
@@ -85,6 +85,7 @@
 <!-- Graphics -->
       <div id='chartDiv'></div>
       <div id='chartDiv_2'></div>
+      <div id='chartDiv_All'></div>
 
       <hr>
       <footer>
