--- a/public/page_2.html
+++ b/public/page_2.html
@@ -2,8 +2,9 @@
 
     <head>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<!-- <script type="text/javascript" src="js/canvasjs-1.7.0/jquery.canvasjs.min.js"></script>-->
-        <script src="http://cdn.zingchart.com/zingchart.min.js"></script>
+      <script type="text/javascript" src="js/zingchart_trial/zingchart.min.js"></script>
+ <!--       <script src="http://cdn.zingchart.com/zingchart.min.js"></script> -->
+
 
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -89,7 +90,7 @@
 
       <hr>
       <footer>
-        <p>&copy; People's Booze</p>
+        <p>&copy; Boozie iBoxes</p>
       </footer>
     </div> <!-- /container --><script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
