Pagination for large request
Post-demo functionality

--- a/public/page_2.html
+++ b/public/page_2.html
@@ -2,8 +2,8 @@
 
     <head>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-      <script type="text/javascript" src="js/zingchart_trial/zingchart.min.js"></script>
- <!--       <script src="http://cdn.zingchart.com/zingchart.min.js"></script> -->
+<!--      <script type="text/javascript" src="js/zingchart_trial/zingchart.min.js"></script> -->
+        <script src="http://cdn.zingchart.com/zingchart.min.js"></script> 
 
 
         <meta charset="utf-8">
@@ -53,15 +53,14 @@
               text-align: center;
             }
           </style>
-          <h2>Analyze This....</h2>
+          <h3><strong>Analyze This....</h3>
           <img src="wine_2.jpg" >
           </img>
           <p></p>
 <!--          <p><a class="btn btn-warning" href="page_2.html" role="button">SNAP</a></p> -->
         </div>
         <div class="col-md-6">
-          <h2>Pick a Store You Want to Analyze</h2>
-          <br></br>
+          <h3><strong>Pick a Store You Want to Analyze</strong></h3>
           <form id="analyticsForm">
             <div class="form-group">
               <input id='ID' name="name" placeholder="Store ID (int btw 1 & 300)" class="form-control-label">
@@ -74,12 +73,17 @@
               <input type="text" placeholder="Vintage" class="form-control-year">
             </div>-->
 
-            <button type="submit" class="btn-lg btn-info" value="Submit">Analyze!</button>
+            <button type="submit" class="btn btn-info" value="Submit">Analyze!</button>
             
           </form>
-        <h2>All Stores</h2>
-        <p><button class="btn-lg btn-info" id="knopka_2_1">Analyze!</button></p>    
+        <h3><strong>All Stores</h3>
+        <p><button class="btn btn-info" id="knopka_2_1">Analyze!</button></p>    
        </div>
+      <h3><strong>All Data Availalle, Will Take a Little Time...</h3>
+        <p><button class="btn btn-danger" id="knopka_2_2">Analyze!</button></p>    
+       </div>
+
+
 
       </div>
 <br></br>
